@@ -1,3 +1,8 @@
+2006-09-07  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Syscall.cs: readdir(P) is not thread-safe, so it needs to be locked so
+	  that the `struct dirent' it returns is stable.
+
 2006-04-06  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* NativeConvert.cs: Fix ToDateTime()/FromDateTime()/ToTimeT()/FromTimeT() so
